<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint" />

    <EditText
        android:id="@+id/author_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author_hint" />

    <EditText
        android:id="@+id/summary_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/summary_hint" />

    <EditText
        android:id="@+id/isbn_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/isbn_hint" />

    <EditText
        android:id="@+id/publisher_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/publisher_hint" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save_btn_label" />

</LinearLayout>